--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,6 +20,6 @@ jobs:
         uses: docker/build-push-action@v1
         with:
           username: hexsix
-          password: ${{ DOCKERHUB_PASSWORD }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
           repository: hexsix/mastodon
           tags: latest
