--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,19 +7,59 @@ on:
     branches: [ "master" ]
 
 jobs:
-
-  build:
-
+  docker-build:
     runs-on: ubuntu-latest
+    if: ${{ !contains(github.event.commits.*.message, '[skip ci]') && !contains(github.event.commits.*.message, '[ci skip]') }}
 
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
+      - name: 🔍 Checkout code
+        uses: actions/checkout@v2
         
-      - name: Build and push to Docker Hub
-        uses: docker/build-push-action@v3
+      - name: 🦄 Set up Qemu for Docker
+        uses: docker/setup-qemu-action@v1
+
+      - name: 🏗️ Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: 🔑 Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: hexsix
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: 🎃 Setup outputs
+        id: vars
+        run: |
+          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+          
+      - name: 👻 Setup metadata
+        uses: docker/metadata-action@v3
+        id: meta
+        with:
+          images: hexsix/mastodon
+          flavor: |
+            latest=auto
+          tags: |
+            type=edge,branch=main
+            type=match,pattern=v(.*),group=0
+            type=ref,event=pr
+
+      - name: ⚓ Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          pull: true
+          push: true
+          platforms: linux/amd64,linux/arm64
+          cache-from: type=registry,ref=hexsix/mastodon:latest
+          cache-to: type=inline
+          tags: |
+            hexsix/mastodon:latest
+            hexsix/mastodon:sha-${{steps.vars.outputs.sha_short}}
+
+      - name: 🔖 Update repo description
+        uses: peter-evans/dockerhub-description@v2
         with:
           username: hexsix
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
           repository: hexsix/mastodon
-          tags: latest
