--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,51 +15,20 @@ jobs:
       - name: 🔍 Checkout code
         uses: actions/checkout@v2
         
-      - name: 🦄 Set up Qemu for Docker
-        uses: docker/setup-qemu-action@v1
+      - name: 🦄 Set up QEMU
+        uses: docker/setup-qemu-action@v2
 
       - name: 🏗️ Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
       - name: 🔑 Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: hexsix
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      - name: 🎃 Setup outputs
-        id: vars
-        run: |
-          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-          
-      - name: 👻 Setup metadata
-        uses: docker/metadata-action@v3
-        id: meta
-        with:
-          images: hexsix/mastodon
-          flavor: |
-            latest=auto
-          tags: |
-            type=edge,branch=main
-            type=match,pattern=v(.*),group=0
-            type=ref,event=pr
 
       - name: ⚓ Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
-          context: .
-          pull: true
           push: true
-          platforms: linux/amd64,linux/arm64
-          cache-from: type=registry,ref=hexsix/mastodon:latest
-          cache-to: type=inline
-          tags: |
-            hexsix/mastodon:latest
-            hexsix/mastodon:sha-${{steps.vars.outputs.sha_short}}
-
-      - name: 🔖 Update repo description
-        uses: peter-evans/dockerhub-description@v2
-        with:
-          username: hexsix
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          repository: hexsix/mastodon
+          tags: hexsix/mastodon:latest
